--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
 <input type="button" onclick="resumeSpider()" value="Resume spider">
 <input type="button" onclick="resumePolling()" value="Resume polling">
 <input type="button" onclick="stopSpider()" value="Stop spider">
-<input type="button" onclick="recalculateKeywordFrequencies()" value="Recalculate keyword frequencies"><br>
+<input type="button" onclick="recalculateKeywordFrequencies()" value="Recalculate scores"><br>
 <span id="status"></span>
 <h1>Which topics are relevant?</h1>
 <div>
